--- a/package.json
+++ b/package.json
@@ -1,39 +1,71 @@
 {
   "name": "pz-vue2-vuecli",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vue-cli-service serve --mode development",
+    "dev:pro": "vue-cli-service serve --mode production",
+    "build": "vue-cli-service build ",
+    "tsCheck": "vue-tsc --noEmit --skipLibCheck",
+    "lint": "eslint ./src --ext .vue,.js,jsx,.ts,tsx",
+    "lint:fix": "eslint --fix ./src --ext .vue,.js,jsx,.ts,tsx",
+    "preview": "serve ./dist",
+    "prepare": "husky install"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-customizable"
+    }
+  },
+  "lint-staged": {
+    "*.{vue,js,jsx,ts,tsx}": "eslint --fix"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.4.6",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "pinia": "^2.0.11",
+    "vue": "^2.6.14",
+    "vue-demi": "^0.12.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@iconify/json": "^2.1.3",
+    "@iconify/vue2": "^1.1.3",
+    "@types/chroma-js": "^2.1.3",
+    "@types/node": "^17.0.18",
+    "@types/qs": "^6.9.7",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-typescript": "^5.0.1",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "@vue/runtime-dom": "^3.2.31",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
+    "cz-customizable": "^6.3.0",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
+    "husky": "^7.0.4",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
+    "node-sass": "^7.0.1",
+    "prettier": "^2.5.1",
+    "sass-loader": "^12.6.0",
+    "serve": "^13.0.2",
+    "typescript": "^4.5.5",
+    "unplugin-icons": "^0.13.2",
+    "unplugin-vue2-script-setup": "^0.9.3",
+    "vue-template-compiler": "^2.6.14",
+    "vue-tsc": "^0.31.4",
+    "windicss": "^3.4.3",
+    "windicss-webpack-plugin": "^1.6.5"
   },
   "browserslist": [
     "> 1%",
